# o11y

./: LICENSE  README.md
GoProjects/: .gitignore  README.md  build-otelsml-image.sh
GoProjects/demclient/: README.md  client.go  client_test.go  explore.go  go.mod  learn.go  project.go  types.go
GoProjects/godf/: concat.go  concat_test.go  dataframe.go  (+14 more)
dd_etl/: .gitignore  README.md  __init__.py  main.py  requirements.txt
otel_etl/: .gitignore  OTEL_SERVICE_METRIC_HOWTO.md  README.md  __init__.py  main.py  requirements.txt  streaming.py
otel_flagd/: .gitignore  README.md  all_failures_5mins.json  pyproject.toml  requirements.txt
otel_flagd/otel_flagd/: __main__.py
otel_flagd/scenarios/: all_failures_5mins.sh  all_failures_Xmins.sh  spike_test.json  spike_test.sh  total_failure.sh
otel_flagd/src/otelfl/: __init__.py  __main__.py  config.py  models.py
otel_flagd/src/otelfl/cli/: app.py  experiment_commands.py  fetch_commands.py  flag_commands.py  load_commands.py  scenario_commands.py  stats_commands.py
otel_flagd/src/otelfl/core/: experiment_logger.py  flagd_client.py  locust_client.py  run_mode.py  scenarios.py  ts_logger.py
otel_flagd/src/otelfl/tui/: app.py  flag_panel.py  load_panel.py  scenario_modal.py  stats_panel.py  styles.tcss  timeline_panel.py
otel_flagd/tests/: conftest.py  test_experiment_logger.py  test_flagd_client.py  test_load_commands.py  test_locust_client.py  test_run_mode.py  test_scenarios.py  test_ts_logger.py
otel_synth/: .gitignore  README.md  regimes-small.json  regimesMTL.json  scenario.yaml
signals/: __init__.py
(+135 files in other folders)
