[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "otelfl"
version = "0.1.0"
description = "CLI/TUI tool to control OpenTelemetry Demo feature flags and load generator"
requires-python = ">=3.11"
dependencies = [
    "textual>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[project.scripts]
otelfl = "otelfl.cli.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/otelfl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
